--- a/new_analysis/New_analysis_palsa.Rmd
+++ b/new_analysis/New_analysis_palsa.Rmd
@@ -19,6 +19,7 @@ output:
 ### Importing libraries
 
 ```{r libraries, message=FALSE, warning=FALSE}
+library(png)
 library(readxl)
 library(ggpubr)
 library(vegan)
@@ -28,6 +29,7 @@ library(pheatmap)
 library(ComplexHeatmap)
 library(patchwork)
 library(ggforce)
+library(ggtext)
 library(mixOmics)
 library(ZIR)
 library(pathview)
@@ -460,6 +462,27 @@ nml <- pivot_longer(norm_matrix, everything(), names_to = 'SampleID', values_to 
 
 ## 6. Multivariate Analysis
 
+### PERMANOVA
+
+```{r warning=FALSE}
+
+t_norm_matrix_all <- t(norm_matrix)
+dm.method <- 'bray'
+# distance matrix by Bray because relative abundance mode was selected
+dm_all <- vegdist(t_norm_matrix_all, method=dm.method)
+
+set.seed(456)
+permanova <- adonis2(dm_all ~ type + time, 
+                     data=metadata, 
+                     permutations=999, 
+                     method="bray",
+                     by = 'terms')
+permanova
+
+table_file <- file.path(tables_dir, 'permanova.csv')
+write_csv(rownames_to_column(permanova, var = ' '), table_file)
+```
+
 ### NMDS
 
 Calculating distance matrix
@@ -508,7 +531,17 @@ nmds_plot <- nmds_scores %>%
   scale_color_manual(values = ellipse_col) +
   scale_fill_manual(values = ellipse_col) +
   guides(fill = guide_legend(override.aes = list(shape = 21, color = NA))) +
-  labs(title = 'NMDS plot') +
+  geom_richtext(label =  paste0('**stress =** ', round(nmds$stress, 4), '<br>',
+                               '**Time:** *p-value* = ', permanova$`Pr(>F)`[1], '<br>',
+                               '**Sample Type:** *p-value* = ', permanova$`Pr(>F)`[2]),
+                x = -0.075,
+                y = 0.06,
+                hjust = 0,
+                vjust = 1,
+                size = 2) +
+  labs(title = 'NMDS plot',
+       color = 'Time',
+       shape = 'Sample type') +
   theme_bw() +
   theme(plot.title = element_text(face = 'bold', hjust = 0.5))
 nmds_plot
@@ -571,28 +604,7 @@ figure_file <- file.path(figures_dir, 'PCA-plot.png')
 ggsave(figure_file, pca_plot, dpi = 300)
 ```
 
-### PERMANOVA
 
-```{r warning=FALSE}
-
-t_norm_matrix_all <- t(norm_matrix)
-dm.method <- 'bray'
-# distance matrix by Bray because relative abundance mode was selected
-dm_all <- vegdist(t_norm_matrix_all, method=dm.method)
-
-set.seed(456)
-permanova <- adonis2(dm_all ~ type + time, 
-                     data=metadata, 
-                     permutations=999, 
-                     method="bray",
-                     by = 'terms')
-permanova %>% 
-  knitr::kable() %>% 
-  kableExtra::kable_styling(bootstrap_options = c("striped", "hover"))
-
-table_file <- file.path(tables_dir, 'permanova.csv')
-write_csv(rownames_to_column(permanova, var = ' '), table_file)
-```
 
 ### sPLS-DA
 
@@ -630,14 +642,7 @@ loadings <- plotLoadings(splsda_res, contrib = 'max', method = 'mean', border = 
 
 loadings
 
-figure_3 <- pls_da_plot$graph + loadings +
-  plot_annotation(tag_levels = 'A') &
-  theme(plot.tag = element_text(size = 20))
 
-figure_3
-
-figure_file <- file.path(figures_dir, 'Figure3.png')
-ggsave(figure_file, figure_3, dpi = 300, width = 10)
 ```
 
 
@@ -700,7 +705,7 @@ sample_lists <- pmap(list(treatments_df$time,
                      })
 names(sample_lists) <- treatments_df$t_name
 
-samples_peat <- sample_lists[str_detect(names(sample_lists), 'peat')]
+samples_peat <- sample_lists[str_detect(names(sample_lists), 'peat$')]
 samples_inc <- sample_lists[str_detect(names(sample_lists), 'peat_and_litter')]
 ```
 
@@ -980,8 +985,36 @@ agains_litter <- reduce(ma_plots, `|`) +
 
 agains_litter
 
-
 ggsave(file.path(figures_dir, 'ma_plots_litter.png'), agains_litter, dpi = 300, width = 8)
+
+ma_dfs <- imap(diff_exp_tables, function(x, y){
+  df <- x %>% 
+    mutate(A = (control_means + treatment_means)/2,
+           sig_color = case_when(pval.adj < 0.1 & Expression == 'Upregulated' ~ 'Sig. upregulated',
+                                 pval.adj < 0.1 & Expression == 'Downregulated' ~ 'Sig. downregulated',
+                                 TRUE ~ 'Non significant'),
+           time = y)
+})
+
+ma_dfs_all <- do.call(rbind, ma_dfs)
+
+ma_all <- ma_dfs_all %>% 
+  mutate(time = str_remove(time, '_peat.*')) %>% 
+  ggplot() +
+    geom_point(aes(x = A,
+                   y = log2FC,
+                   color = sig_color)) +
+    scale_color_manual(values = c('Sig. upregulated' = 'indianred2',
+                                  'Sig. downregulated' = 'blue2',
+                                  'Non significant' = 'gray80')) +
+    labs(x = 'Log2 mean expression',
+         y = 'Log2 fold change',
+         color = 'Differential abundance') +
+    theme_bw() +
+  facet_grid(cols= vars(time)) +
+  theme(strip.placement = 'outside')
+
+ma_all
 
 ```
 
@@ -1037,9 +1070,9 @@ diff_exp_sig_labeled <- map2(diff_exp_tables, label_inc, function(x, y){
     filter(pval.adj < 0.1) %>% 
     mutate(label = case_when(
       (FeatureID %in% label_lists$T0_litter) & 
-        (FeatureID %in% y) ~ 'Label in both',
-      FeatureID %in% label_lists$T0_litter ~ 'Label in control',
-      FeatureID %in% y ~ 'Label in treatment',
+        (FeatureID %in% y) ~ 'Labeled in both',
+      FeatureID %in% label_lists$T0_litter ~ 'Labeled in litter samples',
+      FeatureID %in% y ~ 'Label in peat+litter samples',
       TRUE ~ 'Unlabeled')) %>% 
     left_join(comp_temp, by = 'FeatureID')
 })
@@ -1050,40 +1083,37 @@ diff_exp_sig_labeled <- map2(diff_exp_tables, label_inc, function(x, y){
 
 ```{r}
 names <- names(diff_exp_sig_labeled)
-plot_bar <- map2(diff_exp_sig_labeled, names, 
+plot_bar_dfs <- map2(diff_exp_sig_labeled, names, 
                  function(x, y){
                    x %>% 
                      mutate(Expression = factor(Expression, 
                                                 levels = c('Upregulated', 'Downregulated'))) %>% 
                      group_by(Expression, label) %>% 
                      count(Class) %>% 
-                     mutate(n = ifelse(Expression == 'Upregulated', n, -n)) %>% 
-                     ggplot() +
-                     geom_col(aes(x = Class,
-                                  y = n,
-                                  fill = label),
-                              color = 'black') +
-                     labs(title = y,
-                          y = '<-- Downregulated   Upregulated -->') +
-                     scale_y_continuous(labels = abs, breaks = scales::pretty_breaks()) +
-                     facet_wrap(~Expression, nrow = 2,
-                                scales = 'free_y') +
-                     scale_fill_manual(values = c(get_palette('Set1', 3), 'gray')) +
-                     theme_bw() +
-                     theme(plot.title = element_text(face = 'bold', 
-                                                     hjust = 0.5),
-                           axis.text.x = element_text(angle = 45, 
-                                                      hjust = 1))
+                     mutate(n = ifelse(Expression == 'Upregulated', n, -n),
+                            time = y) 
                  })
 ```
 
 ```{r}
-bars <- reduce(plot_bar, `|`) +
-  plot_layout(guides = 'collect')
-bars
+bars <- do.call(rbind, plot_bar_dfs) %>% 
+  mutate(time = str_remove(time, '_peat.*')) %>% 
+  ggplot() +
+  geom_col(aes(x = Class,
+               y = n,
+               fill = label),
+           color = 'black') +
+  labs(y = '<-- Downregulated   Upregulated -->') +
+  scale_y_continuous(labels = abs, breaks = scales::pretty_breaks()) +
+  scale_fill_manual(values = c(get_palette('Dark2', 3), 'gray')) +
+  theme_bw() +
+  facet_grid(cols = vars(time)) +
+  theme(plot.title = element_text(face = 'bold', 
+                                  hjust = 0.5),
+        axis.text.x = element_text(angle = 45, 
+                                   hjust = 1))
 
-figure_file <- file.path(figures_dir, 'classes_with_t1_peat.png')
-ggsave(figure_file, bars, dpi = 300, width = 8, bg = 'white')
+bars
 
 ```
 
@@ -1356,19 +1386,7 @@ features_accumulating <- dendro_data$labels %>%
 ```
 
 
-```{r}
 
-figure_2 <- wrap_elements(full = ht_grob, clip = FALSE) + nmds_plot +
-  plot_layout(widths = c(2.5, 1.2)) +
-  plot_annotation(tag_levels = 'A') &
-  theme(plot.tag = element_text(size = 20))
-
-figure_2
-
-figure_file <- file.path(figures_dir, 'Figure2.png')
-ggsave(figure_file, figure_2, dpi = 300, width = 12, height = 6,  bg = 'white')
-
-```
 
 
 #### Molecular class of differentially abundant metabolites
@@ -1601,14 +1619,14 @@ write_csv(node_table, file.path(tables_dir, 'node_table.csv'))
 
 ```
 
-## 10. Dynamic time warping
+## 9. Dynamic time warping
 
 ```{r}
 
 
 label_inc_all <- unique(reduce(label_inc, `c`))
 
-label_status_color <- set_names(c(get_palette('Set1', 3), 'gray'),
+label_status_color <- set_names(c(get_palette('Dark2', 3), 'gray'),
                                 c('Label in litter and incubations',
                                   'Label only in incubation',
                                   'Label only in litter',
@@ -1678,7 +1696,7 @@ data_dwt_sig <- auc_matrix %>%
 
 dwt_res <- tsclust(data_dwt_sig, 
                    type = 'h', 
-                   k = 4,
+                   k = 3,
                    preproc = zscore,
                    distance = 'sbd',
                    centroid = shape_extraction,
@@ -1686,7 +1704,7 @@ dwt_res <- tsclust(data_dwt_sig,
 
 dwt_res@clusinfo
 
-feature_dwt_plot_sig <- plot_dwt_clusters(dwt_res, nrow = 2)
+feature_dwt_plot_sig <- plot_dwt_clusters(dwt_res, nrow = 3)
 feature_dwt_plot_sig
 
 ```
@@ -1714,7 +1732,7 @@ data_dwt_sig <- auc_matrix %>%
 
 dwt_res <- tsclust(data_dwt_sig, 
                    type = 'h', 
-                   k = 4,
+                   k = 3,
                    preproc = zscore,
                    distance = 'sbd',
                    centroid = shape_extraction,
@@ -1722,27 +1740,28 @@ dwt_res <- tsclust(data_dwt_sig,
 
 dwt_res@clusinfo
 
-feature_dwt_plot_sig <- plot_dwt_clusters(dwt_res, nrow = 2)
+feature_dwt_plot_sig <- plot_dwt_clusters(dwt_res, nrow = 3)
 feature_dwt_plot_sig
 
-loadings_30 <- plotLoadings(splsda_res, contrib = 'max', method = 'mean', border = TRUE,
-                         title = 'Features contributing to Component 1',
-                         plot = FALSE) %>% 
-  rownames_to_column(var = 'FeatureID') %>% 
-  left_join(feature_annot_df, by = 'FeatureID') %>% 
-  mutate(Contributes = ifelse(Contrib.litter, 'litter', 'incubation')) %>% 
-  ggplot(aes(x = importance,
-             y = fct_reorder(FeatureID, abs(importance)),
-             fill = Class)) +
-  #scale_fill_manual(values = type_col[c(1,2)]) +
-  geom_col(color = 'black') +
-  labs(y = 'FeatureID',
-       x = '<----Litter----   --Incubation-->') +
-  scale_x_continuous(limits = c(-0.6, 0.6)) +
-  theme_bw() +
-  theme(plot.title = element_text(face = 'bold', hjust = 0.5))
 
-loadings_30
+# loadings_30 <- plotLoadings(splsda_res, contrib = 'max', method = 'mean', border = TRUE,
+#                          title = 'Features contributing to Component 1',
+#                          plot = FALSE) %>% 
+#   rownames_to_column(var = 'FeatureID') %>% 
+#   left_join(feature_annot_df, by = 'FeatureID') %>% 
+#   mutate(Contributes = ifelse(Contrib.litter, 'litter', 'incubation')) %>% 
+#   ggplot(aes(x = importance,
+#              y = fct_reorder(FeatureID, abs(importance)),
+#              fill = Class)) +
+#   #scale_fill_manual(values = type_col[c(1,2)]) +
+#   geom_col(color = 'black') +
+#   labs(y = 'FeatureID',
+#        x = '<----Litter----   --Incubation-->') +
+#   scale_x_continuous(limits = c(-0.6, 0.6)) +
+#   theme_bw() +
+#   theme(plot.title = element_text(face = 'bold', hjust = 0.5))
+# 
+# loadings_30
 
 ```
 
@@ -1918,7 +1937,85 @@ ggvenn::ggvenn(diff_lists_down)
 
 ```
 
+# 10. Final figures
+
+### Figure 1
+
+# Loading external figure
+
+```{r}
+label_img <- readPNG(file.path(figures_dir, 'label_features_ID.png'), native = TRUE)
+```
 
 
+# Joining figures
+
+```{r}
+fig1 <- (((label_plot / label_annot_bar) + 
+            plot_layout(heights = c(20, 1),
+                        guides = 'collect')) |                
+  wrap_elements(full = label_img,
+                clip = FALSE)) +
+  plot_layout(widths = c(1, 3)) +
+  plot_annotation(tag_levels = list(c('A', '', 'B')))
+
+fig1                                                       
+
+figure_file <- file.path(figures_dir, 'final_figures', 'Figure_1.png')
+ggsave(figure_file, fig1, dpi = 300, height = 5, width = 15)
+```
+
+### Figure 2
+
+```{r}
+
+figure_2 <- wrap_elements(full = ht_grob, clip = FALSE) + nmds_plot +
+  plot_layout(widths = c(2.5, 1.2)) +
+  plot_annotation(tag_levels = 'A') &
+  theme(plot.tag = element_text(size = 20))
+
+figure_2
+
+figure_file <- file.path(figures_dir, 'final_figures', 'Figure2.png')
+ggsave(figure_file, figure_2, dpi = 300, width = 12, height = 6,  bg = 'white')
+
+```
+
+### Figure 3
+
+```{r}
+figure_3 <- ma_all / bars
+
+figure_3
+
+figure_file <- file.path(figures_dir, 'final_figures', 'Figure3.png')
+ggsave(figure_file, figure_3, dpi = 300, width = 8, height = 8,  bg = 'white')
+
+
+```
+
+
+### Figure 4
+
+```{r}
+figure_4 <- pls_da_plot$graph + loadings +
+  plot_annotation(tag_levels = 'A') &
+  theme(plot.tag = element_text(size = 20))
+
+figure_4
+
+figure_file <- file.path(figures_dir, 'final_figures', 'Figure4.png')
+ggsave(figure_file, figure_4, dpi = 300, width = 10)
+```
+
+### Figure 5
+
+```{r}
+figure_5 <- feature_dwt_plot_sig
+
+figure_file <- file.path(figures_dir, 'final_figures', 'Figure5.png')
+ggsave(figure_file, figure_5, dpi = 300, width = 8)
+
+```
 
 
